--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "5.5.2",
     "antd": "5.22.2",
+    "classnames": "2.5.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "uuid": "11.0.3"
