--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,17 @@
 {
   "manifest_version": 3,
-  "name": "UUID Generator",
-  "description": "Generate and store UUIDs of different versions in your browsers",
+  "name": "Quick UUID Generator",
+  "description": "Generate random UUIDs of different versions in from your browser window",
   "version": "1.0.0",
   "action": {
     "default_popup": "index.html",
-    "default_icon": "assets/id.png"
+    "default_icon": "assets/icon-128.png"
+  },
+  "icons": {
+    "16": "assets/icon-16.png",
+    "24": "assets/icon-24.png",
+    "32": "assets/icon-32.png",
+    "64": "assets/icon-64.png",
+    "128": "assets/icon-128.png"
   }
 }
